--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
 
 *, *::after, *::before {
     box-sizing: border-box;
@@ -22,13 +22,13 @@ body {
 
 .conteiner {
     width: 22em;
-    height: 32em;
+    height: 34em;
     background-color: hsl(0, 0%, 100%);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border-radius: 4%;
+    border-radius: 5%;
 }
 
 .image-conteiner {
@@ -40,5 +40,20 @@ body {
     margin: 1em;
     position: relative;
     max-height: 20em;
-    border-radius: 4%;
+    border-radius: 5%;
+}
+
+.title {
+    font-size: 1.4em;
+    font-weight: 700;
+    color: hsl(218, 44%, 22%);
+    text-align: center;
+    margin-top: 0.5em;
+}
+
+.description {
+    color: hsl(220, 15%, 55%);
+    font-weight: 400;
+    text-align: center;
+    margin-top: 1em;
 }
