Branch to implement the advice

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+/* Bartosz Utratny */
+
+
 @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
 
 * {
@@ -70,5 +73,3 @@ footer {
 footer a {
     color: black
 }
-
-/* Comment */
