--- a/styles.css
+++ b/styles.css
@@ -55,14 +55,25 @@ main {
     font-weight: 700;
     color: hsl(218, 44%, 22%);
     text-align: center;
-    margin-top: 1.2em;
+    margin-top: 0.7em;
+    margin-bottom: 0;
+}
+
+.title-two {
+    font-size: 1.4em;
+    font-weight: 700;
+    color: hsl(218, 44%, 22%);
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 1em;
 }
 
 .description {
     color: hsl(220, 15%, 55%);
     font-weight: 400;
     text-align: center;
-    margin-top: 1em;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 footer {
